force-app/main/default/objects/Protected_Campaign_Status__mdt/Protected_Campaign_Status__mdt.object-meta.xml
<CustomObject>
    <label>Protected Campaign Status</label>
    <pluralLabel>Protected Campaign Statuses</pluralLabel>
</CustomObject>