force-app/main/default/objects/Protected_Campaign_Status__mdt/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>The Campaign&apos;s Type (not record type) for this Protected Status</description>
    <label>Campaign Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>