force-app/main/default/objects/Protected_Campaign_Status__mdt/fields/New_Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Campaign_Member_Status__c</fullName>
    <label>New Campaign Member Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>