force-app/main/default/objects/Protected_Campaign_Status__mdt/fields/Original_Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Original_Campaign_Member_Status__c</fullName>
    <label>Original Campaign Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Responded</fullName>
                <default>true</default>
                <label>Responded</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>